--- a/realhrstatic/main.css
+++ b/realhrstatic/main.css
@@ -190,8 +190,6 @@ h6{
 .needcardall{
     display: flex;
     flex-wrap: wrap;
-    /* margin:20px 100px;
-    padding:30px 150px;   */
     padding-top: 40px;
     color: rgb(44, 44, 44);
 }
@@ -298,5 +296,39 @@ input[type=text], [type=number],textarea{
   .smicons{
     background-color: #ffffff5b ;
     border:1px solid #cfcfcf;
+    border-radius: 5px;
     padding: 10px;
   }
+  .footer{
+    background-image: url(https://realhrsoft.com/images/homepage/footer-bg.svg);
+   
+    text-align: center;
+  }
+  .foot{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding:40px 10px 20px;
+  }
+  .footercards{
+    display: flex;
+    flex:10%;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    color: #fff;
+  }
+  .footercards ul{
+    list-style-type: none;
+    font-size: 12px;
+    text-align: left;
+    line-height: 22px;
+    margin: 0;
+  }
+  .footercards p{
+    margin:0;
+    padding: 5px;
+  }
+ .footercards img{
+    padding: 2px;
+ }
