--- a/lms/style.css
+++ b/lms/style.css
@@ -1,18 +1,292 @@
 body{
     font-family: 'Roboto';
+    margin:0;
+  
 }
+
 .navtop{
     display: flex;
     justify-content: space-between; 
     padding: 0px 70px; 
     background: #fff; 
     margin: 0;
-    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.356);
+    z-index: 1;
 }
 .navtopleft{
-    display: flex;
+    display:flex;
+    align-items: center ;
+    
 }
 .navtopitems{
     border-right: 1px solid grey;
     padding: 5px;
+    padding: 0 20px;
+    
+}
+
+.navbar{
+    display: flex; 
+    justify-content: space-between; 
+    padding: 10px 100px;
+    background: #02bea6; 
+    margin: 0;
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.541);
+}
+.navbar ul{
+    display: flex;
+    list-style-type: none;
+    font-size: 14px;
+    line-height: 22px;
+
+}
+.navbar li{
+    padding:0 1.5rem;
+}
+.selected{
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 4px;
+    
+}
+.navbar h5{
+    color: #fff;
+    font-size: 40px;
+    font-weight: 400;
+    padding:0;
+    margin:0;
+}
+a:link { 
+    text-decoration: none; 
+    color: rgb(255, 255, 255);
+}
+
+a:visited {
+    text-decoration: none; color: rgb(255, 255, 255);
+}
+
+a:hover { 
+    text-decoration: none; color: rgb(3, 3, 3);
+}
+
+a:active {
+    text-decoration: none; color:rgb(0, 0, 0);
+}
+.herobanner{
+    /* background: url("hero.jpg") ; */
+    /* opacity: 0.5; */
+    background-repeat: no-repeat;
+    background-size: cover;
+   display: flex;
+   align-items: center;
+   padding: 80px;
+   
+}
+.herobanner img{
+    opacity: 0.3;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    z-index: -1;
+}
+.herotext{
+    margin: 20px;
+    padding: 20px;
+}
+.herotext h1{
+    font-size: 70px;
+    font-weight: 800;
+    line-height: 75px;
+    padding-bottom: 5px;
+    margin-bottom: 0;
+    margin-top: 10px;
+    color: #02bea6 ; 
+}
+.herotext p{
+    font-size: 18px;
+    font-weight: 50;
+    line-height: 30px;
+    color:rgb(61, 61, 61);
+}
+.herotext button{
+    font-weight: 500;
+    border-radius: 4px;
+    background-color:#02bea6;
+    border:none;
+    padding: 10px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    color: whitesmoke;
+    font-size: 16px;
+    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+}
+.herotext button:hover{
+    background-color:#ffffff;
+    color:#02bea6;
+}
+.choose{
+    color: #fff;
+    background-color: #02bea6;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 10px 90px;
+}
+.choose h1{
+    margin-bottom: 0;
+}
+.functiontile{
+    display: flex;
+    flex-wrap: wrap;
+    margin:30px 90px;
+    padding:0px 0px;  
+    color: rgb(255, 255, 255);
+    
+}
+.functiontileitems{
+    flex:50%;
+    display: flex;
+    padding: 0 0px;;
+    
+}
+
+.funtxt{
+    display: block;
+    text-align: left;
+    padding:0 30px;
+}
+.funtxt h6{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    padding:0 0 10px 0;
+    margin-bottom: 0;
+}
+.funtxt p{
+    font-size: 12px;
+    line-height: 20px;
+    margin-top:0;
+}
+.imgfun img{
+    width: 90px;
+    height:auto;
+    margin-top: 45px;
+}
+
+.courses, .latestcourses{
+    color: #02bea6;
+    background-color: #ffffff;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 50px 90px;
+    margin: 10px 120px;
+}
+.courses h1{
+    margin-bottom: 0;
+ 
+}
+.coursestile{
+    display: flex;
+    flex-wrap: wrap;
+    padding:0px 0px;  
+    color: #02bea6;
+    
+}
+.courses p,.courses h6{
+    color: rgb(87, 87, 87);
+}
+.innercourses p,.innerlatest p{
+    font-size: 12px;
+}
+.coursestile h6{
+    font-size: 20px;
+}
+.coursestileitems{
+    flex:50%;
+    display: flex;
+    padding: 0 0px;;
+    
+}
+.imgcourse img{
+    width: 70px;
+    height: 70px;
+    margin-top: 45px;
+}
+.latestcourses p{ 
+    color:rgb(87, 87, 87);
+}
+.needcardall{
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 40px;
+    color: #02bea6;
+}
+.needcard{
+    display: flex;
+    flex:25%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+}
+.needcard h5{
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 5px;
+    font-size: 17px;
+}
+.needcard p{
+    padding-top: 0;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    
+}
+.needcard:hover{
+    border:1px solid #616161;
+    border-radius: 5px;
+}
+.needcard img{
+    width: 100%;
+    height: 167px;
+    
+}
+.needcard button{
+    font-weight: 500;
+    border-radius: 4px;
+    background-color:#02bea6;
+    border:none;
+    padding: 8px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    color: whitesmoke;
+    font-size: 14px;
+    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+}
+.price{
+    display: flex;
+    justify-content: space-between; 
+    color: rgb(73, 73, 73);
+}
+.price h4{
+    margin-top: 15px;
+    margin-bottom: 0;
+    color: orange;
+    padding-right: 120px;
+    
+    
+}
+.checked {
+    color: orange;
+}
+.fa{
+    margin-top: 15px;
+    margin-bottom: 0;
+    
+}
+.priceinner{
+    padding-right:0px ;
 }
