--- a/lms/style.css
+++ b/lms/style.css
@@ -9,17 +9,18 @@ body{
     justify-content: space-between; 
     padding: 0px 70px; 
     background: #fff; 
+    align-items: center ;
     margin: 0;
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.356);
     z-index: 1;
 }
 .navtopleft{
     display:flex;
-    align-items: center ;
+    text-align: center;
     
 }
 .navtopitems{
-    border-right: 1px solid grey;
+    border-right: 1px solid rgba(128, 128, 128, 0.61);
     padding: 5px;
     padding: 0 20px;
     
@@ -248,7 +249,7 @@ a:active {
 .needcard:hover{
     box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
 }
-.needcard img{
+.needcard img,.newscard img{
     width: 100%;
     height: 167px;
     
@@ -330,6 +331,122 @@ a:active {
     text-decoration: none;
     display: inline-block;
     color: #02bea6;
+    font-size: 14px;
+    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+}
+.news{
+    padding: 50px 90px;
+    margin: 10px 120px;
+    color: #02bea6;
+    text-align: center;
+}
+.newscardall{
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    color: #000000;
+    
+}
+.newscard{
+    display: flex;
+    flex:25%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 25px;
+    text-align: left;
+}
+.newscard h5{
+    font-size: 20px;
+    margin:0;
+    padding:2px 0;
+}
+.newscard p{
+    font-size: 10px;
+    margin:0;
+    padding:10px 0px;
+}
+hr{
+    width: 20%;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(32, 190, 166, 0.75), rgba(0, 0, 0, 0));
+    
+}
+.newscard h6{
+    font-size: 10px;
+    color:rgba(80, 80, 80, 0.63);
+    text-align: right;
+    margin:1px 0;
+}
+.footer{
+    background:#02bea6;
+    text-align: center;
+  }
+  .foot{
+    
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding: 50px 90px;
+    margin: 10px 120px;
+  }
+  .footercards{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    color: #fff;
+  }
+  .footercards ul{
+    list-style-type: none;
+    font-size: 12px;
+    text-align: left;
+    line-height: 22px;
+    margin: 0;
+  }
+  .footercards p{
+    margin:0;
+    padding: 5px;
+  }
+ .footercards img{
+    padding: 2px;
+ }
+ .signup{
+    display: flex;
+    justify-content: space-between; 
+    padding: 0px 70px; 
+    width: 100%;
+    align-items: center;
+ }
+ .signupitems{
+    display: block;
+    text-align: left;
+ }
+ .signupitems p{
+    font-size: 12px;
+}
+.signup button{
+    font-weight: 500;
+    border-radius: 2px;
+    background-color:white;
+    border:1px solid white;
+    padding: 8px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    color: #02bea6;
+    font-size: 14px;
+    box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+}
+.signup input{
+    font-weight: 500;
+    border-radius: 2px;
+    background-color:transparent;
+    border:1px solid white;
+    padding: 8px 8px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    color: #ffffff;
     font-size: 14px;
     box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
 }
