--- a/lms/style.css
+++ b/lms/style.css
@@ -365,7 +365,7 @@ a:active {
     margin:0;
     padding:10px 0px;
 }
-hr{
+.news hr{
     width: 20%;
     border: 0;
     height: 2px;
@@ -381,19 +381,19 @@ hr{
 .footer{
     background:#02bea6;
     text-align: center;
+    margin-bottom: 0;
   }
   .foot{
     
     flex-wrap: wrap;
     align-items: flex-start;
     padding: 50px 90px;
-    margin: 10px 120px;
+    margin: 10px 120px 0px;
   }
   .footercards{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     color: #fff;
   }
   .footercards ul{
@@ -407,13 +407,11 @@ hr{
     margin:0;
     padding: 5px;
   }
- .footercards img{
-    padding: 2px;
- }
+ 
  .signup{
     display: flex;
     justify-content: space-between; 
-    padding: 0px 70px; 
+    /* padding: 0px 70px;  */
     width: 100%;
     align-items: center;
  }
@@ -449,4 +447,43 @@ hr{
     color: #ffffff;
     font-size: 14px;
     box-shadow: 0 4px 16px 0 rgba(0,0,0,0.1);
+}
+.footericons{
+    display: flex;
+    align-items: center;
+}
+
+i{
+    padding: 10px;
+    margin: 0;
+}
+.fa{
+    margin-top: 0;
+}
+.contactsf{
+    display: flex;
+    justify-content: space-between; 
+    width: 100%;
+}
+.footercontact ul{
+    padding: 0;
+}
+.footercontact p{
+    text-align: left;
+    padding: 0;
+}
+.footercards hr{
+    border: 0;
+    width: 100%;
+    height: 1px;
+    background: #ffffff;
+    background-image: linear-gradient(to right, #ccc, #ffffff, #ccc);
+}
+.copy{
+    font-size: 10px;
+    padding:0 !important;
+}
+input:focus{
+    border: 2px rgb(255, 255, 255) solid;
+    outline: none;
 }
