--- a/lms/media.css
+++ b/lms/media.css
@@ -1,11 +1,11 @@
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 768px and down) */
 @media only screen and (max-width: 768px) {
     .navtop{
       display: block;
       padding: 10px;
     }
     .navbar{
-      flex-direction: column;
+      
       padding:5px 20px;
       align-items: center;
     
@@ -24,6 +24,9 @@
     }
     .navbar li{
         padding:0;
+    }
+    .navbar a{
+        padding:10px;
     }
     .selected{
         border:none;
@@ -90,3 +93,25 @@
       }
   }
   
+  @media(max-width: 768px) {
+    .navitems a {display: none;
+        padding: 16px 0;}
+    .navitems a.icon {
+    float: right;
+    display: block;
+  }
+}
+   
+     @media screen and (max-width: 768px) {
+        .navitems.responsive {position: relative;}
+        .navitems.responsive .icon {
+          right: 0;
+          top: 0;
+        }
+        .navitems.responsive a {
+          float: none;
+          display: block;
+          text-align: right;
+        }
+    
+    }
