--- a/hangman/style.css
+++ b/hangman/style.css
@@ -15,6 +15,7 @@ li{
 #topDiv{
     display: flex;
     align-items: center;
+    
     width: 100%;
     height: 330px;
 }
@@ -27,5 +28,11 @@ li{
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
  
+}
+@media only screen and (max-width: 768px) {
+    #topDiv{
+        flex-wrap: wrap;
+    }
 }
