--- a/hangman/style.css
+++ b/hangman/style.css
@@ -8,7 +8,7 @@ li{
     justify-content: space-between;
 }
 #stickman{
-    margin: 30px;
+    margin: 10px;
     padding: 20px;
     
 }
@@ -30,6 +30,9 @@ li{
     align-items: center;
     flex-wrap: wrap;
  
+}
+#myword{
+    padding: 0px !important;
 }
 @media only screen and (max-width: 768px) {
     #topDiv{
