--- a/imageCarousel/style.css
+++ b/imageCarousel/style.css
@@ -1,11 +1,14 @@
 body{
    font-family: 'Roboto'; 
+   margin:0;
+   background-color: black;
 }
 .buttonL, .buttonR{
     position:absolute;
-    top: 50%;
+    top: 45%;
     
 }
+
 .dots{
     display: inline-block !important;
     background-color: rgb(148, 148, 148);
@@ -13,20 +16,24 @@ body{
     margin: 10px;
 }
 .active, .dots:hover {
-    background-color: #0a0a0a;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 8px 0 rgba(255, 255, 255, 0.5) !important;
   }
 button:hover{
-    background-color: #0a0a0a94!important;
-    color: aliceblue !important;
+    background-color: #ffffff62!important;
+    color: rgb(0, 0, 0) !important;
   }
 #imgs{
+    max-width: 100% !important;
     width:100% !important;
-    height: 400px;
+    height: 500px;
     object-fit: cover;
     display: block !important;
+    
 }
 .imgCar{
     display:none;
     
 }
+
  
