--- a/imageCarousel/style.css
+++ b/imageCarousel/style.css
@@ -4,38 +4,14 @@ body{
    background-color: black;
    overflow: hidden;
 }
-.buttonL, .buttonR{
-    position:absolute;
-    top: 45%;
-}
-
-.dots{
-    display: inline-block !important;
-    background-color: rgb(148, 148, 148);
-    border-radius: 50%;
-    margin: 10px;
-}
 .active, .dots:hover {
-    background-color: #ffffff;
+    background-color: #ffffff !important;
     box-shadow: 0px 0px 8px 0 rgba(255, 255, 255, 0.5) !important;
   }
 button:hover{
     background-color: #ffffff62!important;
     color: rgb(0, 0, 0) !important;
   }
-#imgs{
-    max-width: 100% !important;
-    width:100% !important;
-    height: 500px;
-    object-fit: cover;
-    display: block !important;
-    
-}
-.imgCar{
-    display:none;
-    
-}
-
 @media screen and (max-width: 768px) {
     h1{
         font-size: 20px;
