Request Trial changes and added responsivness

--- a/hrsoft/src/assets/main.scss
+++ b/hrsoft/src/assets/main.scss
@@ -1,5 +1,5 @@
 
-// @use 'vuetify' with (
-//    $body-font-family: 'Poppins', /*put the font family name here*/
+@use 'vuetify' with (
+   $body-font-family: 'Poppins', /*put the font family name here*/
    
-// );
+);
